index and js changed

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -16,6 +16,10 @@
     <p>See console for output. <a href="">Refresh</a> the page to re-run tests.</p>
     <!-- Create an unordered list with any questions you have -->
 
+    <ul>
+      <li>Q1: For the STRETCH activity, I don't understand why const maxItems needs to go inside the function. I thought we could call variables that sits outside a function from inside.</li>
+    </ul>
+
     <!-- Used for automated testing -->
     <div id="mocha"></div>
     <link rel="stylesheet" href="../test/test.styles.css" />
