--- a/assignment/index.html
+++ b/assignment/index.html
@@ -17,7 +17,7 @@
     <!-- Create an unordered list with any questions you have -->
 
     <ul>
-      <li>Q1: For the STRETCH activity, I don't understand why const maxItems needs to go inside the function. I thought we could call variables that sits outside a function from inside.</li>
+      <li>Not sure how to update addItem without it interfering with the old addItem. Unless, I should have figured out how to change addItem and have it run successfully both times its called.</li>
     </ul>
 
     <!-- Used for automated testing -->
